[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprite_sheet.png" type="Texture" id=1]
[ext_resource path="res://Bullet.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "idle"

[sub_resource type="CircleShape2D" id=4]
radius = 6.0

[node name="Bullet" type="Area2D" groups=["bullets"]]
monitorable = false
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 224, 0, 32, 32 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="DespawnTimer" type="Timer" parent="."]

[node name="ExplosionSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 224, 224, 32, 32 )

[node name="ExplosionTimer" type="Timer" parent="."]
